--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "dependencies": {
     "egg": "^2.15.1",
     "egg-mongoose": "^3.2.0",
-    "egg-scripts": "^2.11.0"
+    "egg-scripts": "^2.11.0",
+    "fs-extra": "^9.0.1",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "autod": "^3.0.1",
