--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   },
   "dependencies": {
     "egg": "^2.15.1",
+    "egg-jwt": "^3.1.7",
     "egg-mongoose": "^3.2.0",
     "egg-scripts": "^2.11.0",
+    "egg-session": "^3.2.0",
     "fs-extra": "^9.0.1",
     "request": "^2.88.2"
   },
